Changed links to folders

--- a/data/btsync.conf
+++ b/data/btsync.conf
@@ -6,7 +6,7 @@
   "shared_folders" : [
     {
       "secret" : "SETYOUROWN",
-      "dir" : "/data/torrents",
+      "dir" : "/data/torrents/downloads",
       "use_relay_server" : true,
       "use_tracker" : true,
       "use_dht" : true,
@@ -16,7 +16,7 @@
     },
     {
       "secret" : "SETYOUROWN",
-      "dir" : "/data/backups",
+      "dir" : "/data/torrents/watch",
       "use_relay_server" : true,
       "use_tracker" : true,
       "use_dht" : true,
