--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,13 @@ transmission:
     - "45555:45555"
   restart: always
   environment:
-    USERNAME: YOURUSERNAME
-    PASSWORD: YOURPASSWORD
+    USERNAME: xxxx
+    PASSWORD: xxxx
 
-btsync:
-  image: viranch/btsync:latest
+sync:
+  image: resilio/sync:latest
   volumes:
-    - ./data:/data
+    - ./data:/mnt/sync
   ports:
-    - "3369:3369"
+    - "55555:55555"
   restart: always
-  environment:
-    - SECRET:xxxxxxx
