Go back to resilio/sync

--- a/data/sync.conf
+++ b/data/sync.conf
@@ -6,7 +6,7 @@
   "shared_folders" : [
     {
       "secret" : "xxxx",
-      "dir" : "/mnt/sync/downloads",
+      "dir" : "/mnt/sync/transmission/downloads",
       "use_relay_server" : true,
       "use_tracker" : true,
       "use_dht" : true,
